commit tree e624bde95b51fd287b39050232ca25384d438c22

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://media.istockphoto.com/id/877369086/photo/lion-panthera-leo-10-years-old-isolated-on-white.jpg?s=612x612&w=is&k=20&c=5XzUExS8nJYT8MDiGxStc5easJ0l1_Yg041uSkduP9g=" 
+         alt="">
+        
+    <img src="https://media.istockphoto.com/id/1218694103/photo/royal-tiger-isolated-on-white-background-clipping-path-included-the-tiger-is-staring-at-its.jpg?s=612x612&w=is&k=20&c=OiIoS3QEiZou3UVEL39mEEw2sNVD_gf1_c0KV0qUW9k=" 
+         alt="tiger">
+
+    <img src="https://as2.ftcdn.net/v2/jpg/00/70/92/55/1000_F_70925538_i3jOunHcPanRzyXJG4Qc2Qa7HFN5c6SB.jpg" 
+         alt="grizzly bear"
+         title="This is a Grizzly Bear">
   </body>
 </html>
